# sistema_ger_casa_show

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
accounts/: test_accounts.py
app/: __init__.py  celery.py  settings.py
app/templates/: base.html
artistas/: admin.py  api.py  forms.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
artistas/migrations/: 0005_mensagem.py  0006_mensagem_data_envio.py
artistas/templates/: artista_delete.html  artista_detail.html  artista_update.html  artistas_list.html
artistas/templates/mensagens/: criar_mensagem_para_artista.html  deletar_mensagem.html  editar_mensagem.html  lista_mensagens.html
dhenv/: pyvenv.cfg
dhenv/Scripts/: activate  activate.bat
eventos/migrations/: 0002_alter_evento_options.py
