[tool.poetry]
name = "Sistema Gererêciamento de Casa de Shows"
version = "0.1.0"
description = "Sistema Gererêciamento de Casa de Shows"
authors = ["Seu Nome <seuemail@exemplo.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
amqp = "5.2.0"
asgiref = "3.8.1"
billiard = "4.2.0"
celery = "5.4.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
cron-descriptor = "1.4.3"
Django = "5.0.7"
django-celery-beat = "2.6.0"
django-timezone-field = "7.0"
docbr = "0.1.3"
flake8 = "7.1.0"
kombu = "5.4.0"
mccabe = "0.7.0"
numpy = "2.0.1"
prompt_toolkit = "3.0.47"
pycodestyle = "2.12.0"
pyflakes = "3.2.0"
python-crontab = "3.2.0"
python-dateutil = "2.9.0.post0"
six = "1.16.0"
sqlparse = "0.5.1"
tzdata = "2024.1"
validate-docbr = "1.10.0"
vine = "5.1.0"
wcwidth = "0.2.13"
djangorestframework = "^3.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
